# control-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: checker.xml  pendulum.xml
src/scripts/: simulate.py
src/simple_pendulum/: pendulum.py
